Chess will show on the board when click on it

--- a/directives/chessBlock.html
+++ b/directives/chessBlock.html
@@ -1,5 +1,5 @@
-<div id="{{ position }}" class="block">
+<div id="{{ position }}" class="block" ng-click="placeChess()">
     <p class="chess">
-        {{ $parent.chessBoard[position] }}
+        {{ currentChess }}
     </p>
 </div>
