--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>Tic Tac Toe</title>
 
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
 <body ng-app="gameApp">
+
     <div class="container container-fluid" ng-controller="gameController">
+
         <div class="row" ng-show="!isGameModeSelected">
             <div class="col-sm-4"></div>
             <div class="col-sm-4">
@@ -22,6 +26,7 @@
             </div>
             <div class="col-sm-4"></div>
         </div>
+
         <div class="row" ng-show="isGameModeSelected">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
@@ -33,13 +38,15 @@
             </div>
             <div class="col-sm-3"></div>
         </div>
+
         <div class="game-board">
             <div ng-repeat="num in nums" class="chess-block">
-                <chess-block position="num"></chess-block>
+                <chess-block position="num" current-chess="chessBoard[num]" empty="chessType.empty"></chess-block>
             </div>
         </div>
 
     </div>
+
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js'></script>
 
@@ -47,6 +54,7 @@
 <script src="js/gameState.js"></script>
 <script src="js/aiController.js"></script>
 <script src="js/gameController.js"></script>
+<script src="js/chessController.js"></script>
 <script src="directives/chessBlock.js"></script>
 
 </html>
