--- a/index.html
+++ b/index.html
@@ -49,12 +49,16 @@
 
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js'></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
+<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/gameState.js"></script>
 <script src="js/aiController.js"></script>
 <script src="js/gameController.js"></script>
 <script src="js/chessController.js"></script>
+<script src="js/gameOverMessageService.js"></script>
 <script src="directives/chessBlock.js"></script>
 
 </html>
